<resources>
    <string name="app_name">PiggyBill</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_expense_input">Insert Expense</string>
    <string name="title_activity_inside_group">InsideGroup</string>
    <string name="title_activity_group_expense">Expenses</string>
    <string name="title_activity_group_stats">Statistics</string>
    <string name="title_activity_group_creation">Group creation</string>
    <string name="title_activity_signup">Sign in</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_join_group">Join a group</string>
    <string name="what">What did you pay for?</string>
    <string name="whatHint">E.g. Cinema tickets</string>
    <string name="When">When?</string>
    <string name="whenHint">dd/mm/yyyy</string>
    <string name="how_much">How much did it cost?</string>
    <string name="how_muchHint">E.g. 35 €</string>
    <string name="photo">Do you want to add a photo of the receipt?</string>
    <string name="miss_author">Set the expense author name.</string>
    <string name="miss_expense">Set what has been bought.</string>
    <string name="miss_amount">Set the expense amount.</string>
    <string name="when">When?</string>
    <string name="has_not_camera">Your device has not a camera avaiable.</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter at least 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_email">Enter an email address!</string>
    <string name="enter_valid_email">Enter a valid email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="pick_image_intent_text">Select Source</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description</string>
    <string name="radiogroup_title_expense">Choose a splitting criterion</string>
    <string name="groupName">Group name</string>
    <string name="groupNameHint">Type group name here...</string>
    <string name="groupNameHintModify">Type new group name here...</string>
    <string name="groupSubject">Group subject</string>
    <string name="groupSubjectHint">Type the subject here...</string>
    <string name="groupSubjectHintModify">Type new subject here...</string>
    <string name="radiogroup_title">Choose a default split criterion</string>
    <string name="equal_parts">Split equally</string>
    <string name="per_quotes">Split by quotes</string>
    <string name="per_percentage">Split by percentages</string>
    <string name="insert_member">Insert a new member</string>
    <string name="add_participant">Create Group</string>
    <string name="splitting_criterion_prompt">Choose a splitting criterion</string>
    <string-array name="splitting_criteria">
        <item>Equal parts</item>
        <item>Per quotes</item>
        <item>Per percentage</item>
    </string-array>
    <string name="invalid_mail_address">Invalid Email Address</string>
    <string name="no_user_insert">There is no user to invite</string>
    <string name="insert_group_name">Insert group name</string>
    <string name="insert_group_descr">There is no description</string>
    <string name="invitation_title">Chose your friends to invite!</string>
    <string name="invitation_message"><html><h1> PiggyBill group invite</h1></html></string>
    <string name="invitation_deep_link">https://www.google.it</string>
    <string name="invitation_custom_image">http://pix.iemoji.com/images/emoji/apple/ios-9/256/grinning-face-with-smiling-eyes.png</string>
    <string name="invitation_cta">test cta</string>
    <string name="invitation_email_subject">You\'are invited in a group</string>
    <string name="groupPin">Group password</string>
    <string name="groupPinHint">Type group password here...</string>
    <string name="groupPinHintModify">Type new group password here...</string>
    <string name="wrong_group_pin">The password must be of at least 6 characters</string>
    <string name="email_subject"> Piggy Bill joining group invitation</string>
    <string name="invitation_failed">Invitation failed</string>
    <string name="invitation_email">
        <![CDATA[<p>Dear user,<br/>
         you received an invitation to join a Piggy Bill group from %1$s.
         <br/>
         If you want to join it, please fill the join group form with the following ID and password contained in the squared brackets.
         Otherwise, ignore this email.
         <br/>
         GroupID: [<b>%2$s</b>] <br/>
         Password: [</b>%3$s</b>] <br/>

          or scan this QR: <img src="%4$s" alt="QRcode"> </p>
        ]]>
</string>
    <string name="no_group_creation_and_inviting">Before inviting, create a group.</string>
    <string name="group_created">Group created</string>
    <string name="group_id">Group ID</string>
    <string name="group_password">Group password</string>
    <string name="join">Join</string>
    <string name="camera_permission_denied">Impossible to use camera: permission denied</string>
    <string name="correct_purchase_added">Purchase added</string>
    <string name="grpup_leaving_text">Do you really want to leave the group?</string>
    <string name="leaving_group_title">Leaving the Group</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_group_modify">GroupModify</string>
    <string name="title_activity_group_modifcation">groupModifcation</string>
    <string name="bt_modify_group">modify group</string>
    <string name="user_name">Your name</string>
    <string name="stats_no_pruchases">There are no purchases!</string>
    <string name="stats_no_pruchases_text">If there are no purchases it is impossible to show the debts among the group members.</string>
    <string name="stats_no_members">You are alone in this group!</string>
    <string name="stats_no_members_text">It is impossible to compute debts and credits if you are alone in the group.</string>
    <string name="insert_expense">Insert a new expense</string>
    <string name="owes_you">Owes you</string>
    <string name="you_owe">You owe</string>
    <string name="were_even">You are even!</string>
    <string name="title_activity_purchase_contributors">purchase_contributors</string>
    <string name="please_insert_your_name_and_optional_an_avatar">Please insert your name and (optional) an avatar</string>
</resources>